--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
 	"main": "app.js",
 	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"server": "nodemon -r dotenv/config src/app.js"
 	},
 	"author": "Przemysław Krawczyk",
 	"license": "MIT",
